add openPlanetSelectionMenu method to PlanetUtil